新添加自定义toast

--- a/app/src/main/res/layout/activity_component_main.xml
+++ b/app/src/main/res/layout/activity_component_main.xml
@@ -30,6 +30,13 @@
         android:textAllCaps="false"></Button>
 
     <Button
+        android:id="@+id/btn_Animator"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Animator"
+        android:textAllCaps="false"></Button>
+
+    <Button
         android:id="@+id/btn_other"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
