总结Android总入口

--- a/app/src/main/res/layout/activity_component_main.xml
+++ b/app/src/main/res/layout/activity_component_main.xml
@@ -37,6 +37,13 @@
         android:textAllCaps="false"></Button>
 
     <Button
+        android:id="@+id/btn_ViewPager"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="ViewPager"
+        android:textAllCaps="false"></Button>
+
+    <Button
         android:id="@+id/btn_other"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
