--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -57,6 +57,13 @@
         android:text="服务activity"
         android:textAllCaps="false" />
 
+    <Button
+        android:id="@+id/btn_receiver"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="广播activity"
+        android:textAllCaps="false" />
+
 
     <TextView
         android:id="@+id/toSecondButtonRefResult"
