总结Android总入口

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -52,6 +52,14 @@
         android:textAllCaps="false" />
 
 
+    <Button
+        android:id="@+id/btn_animation"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="animation"
+        android:textAllCaps="false" />
+
+
     <TextView
         android:id="@+id/toSecondButtonRefResult"
         android:layout_width="wrap_content"
