--- a/app/src/main/res/layout/activity_anim.xml
+++ b/app/src/main/res/layout/activity_anim.xml
@@ -47,6 +47,7 @@
     <Button
         android:id="@+id/btn_customer"
         android:textAllCaps="false"
+        android:layout_margin="30dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="animation_customer" />
