--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -59,6 +59,13 @@
         android:text="animation"
         android:textAllCaps="false" />
 
+    <Button
+        android:id="@+id/btn_asynctask"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="asynctask"
+        android:textAllCaps="false" />
+
 
     <TextView
         android:id="@+id/toSecondButtonRefResult"
