--- a/app/src/main/res/layout/activity_drawable.xml
+++ b/app/src/main/res/layout/activity_drawable.xml
@@ -54,5 +54,22 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="下面是Glide" />
+
+    <Button
+        android:id="@+id/btn_glide"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="glide"
+        android:textAllCaps="false" />
+
+    <ImageView
+        android:id="@+id/iv_glide"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
 
 </android.support.v7.widget.LinearLayoutCompat>
