总结Android总入口

--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -11,4 +11,8 @@
     </declare-styleable>
 
 
+    <declare-styleable name="GifView">
+        <attr name="src" format="reference" />
+    </declare-styleable>
+
 </resources>
