--- a/app/src/main/res/layout/activity_data.xml
+++ b/app/src/main/res/layout/activity_data.xml
@@ -1,9 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".data.DataActivity">
 
-</android.support.constraint.ConstraintLayout>
+    <Button
+        android:id="@+id/btn_Gson"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Gson"
+        android:textAllCaps="false" />
+
+    <Button
+        android:id="@+id/btn_Fastjson"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Fastjson"
+        android:textAllCaps="false" />
+
+    <Button
+        android:id="@+id/btn_litepal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="litepal"
+        android:textAllCaps="false" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView" />
+</android.support.v7.widget.LinearLayoutCompat>
