--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -94,6 +94,13 @@
         android:text="activityActivity"
         android:textAllCaps="false" />
 
+    <Button
+        android:id="@+id/btn_Databaseactivity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Databaseactivity"
+        android:textAllCaps="false" />
+
 
     <TextView
         android:id="@+id/toSecondButtonRefResult"
