--- a/app/src/main/res/layout/activity_fragment.xml
+++ b/app/src/main/res/layout/activity_fragment.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".components.fragment.FragmentActivity">
+    tools:context=".activity.fragment.FragmentActivity">
 
     <LinearLayout
         android:id="@+id/fragment_container"
