总结Android总入口

--- a/app/src/main/res/layout/fragment_fragment2.xml
+++ b/app/src/main/res/layout/fragment_fragment2.xml
@@ -6,11 +6,20 @@
     tools:context=".activity.fragment.Fragment2">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:textSize="55dp"
         android:background="@color/colorAccent"
-        android:text="@string/hello_blank_fragment" />
+        android:text="@string/hello_blank_fragment">
+
+        <Button
+            android:id="@+id/btn_pop"
+            android:text="popBackStack"
+            android:textAllCaps="false"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
 
 </FrameLayout>
