--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -23,4 +23,15 @@
         android:textAllCaps="false"
         tools:layout_editor_absoluteX="93dp"
         tools:layout_editor_absoluteY="128dp" />
+
+    <Button
+        android:id="@+id/btn_fragment"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="fragment"
+        android:textAllCaps="false"
+        tools:layout_editor_absoluteX="93dp"
+        tools:layout_editor_absoluteY="128dp" />
+
+
 </android.support.v7.widget.LinearLayoutCompat>
