--- a/app/src/main/res/layout/activity_receiver.xml
+++ b/app/src/main/res/layout/activity_receiver.xml
@@ -24,4 +24,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="取消注册" />
+
+    <Button
+        android:id="@+id/btn_LocalReceiver"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="本地广播" />
 </LinearLayout>
