--- a/app/src/main/res/layout/activity_receiver.xml
+++ b/app/src/main/res/layout/activity_receiver.xml
@@ -26,6 +26,11 @@
         android:text="取消注册" />
 
     <Button
+        android:id="@+id/btn_registerReceiver"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="注册广播" />
+    <Button
         android:id="@+id/btn_LocalReceiver"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
