百度地图demo上传(一般so文件只用armeabi-v7a即可)

--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -15,4 +15,10 @@
         <attr name="src" format="reference" />
     </declare-styleable>
 
+
+    <declare-styleable name="test">
+        <attr name="text" format="string" />
+        <attr name="testAttr" format="integer" />
+    </declare-styleable>
+
 </resources>
