--- a/app/src/main/res/layout/activity_pie_chart.xml
+++ b/app/src/main/res/layout/activity_pie_chart.xml
@@ -1,17 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:custom="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    xmlns:custom="http://schemas.android.com/apk/res-auto"
     tools:context=".components.defineview.PieChartActivity">
 
 
     <!--自定义view-->
     <com.yy.app.components.defineview.PieChart
-        custom:showText="true"
-        custom:labelPosition="left" />
+        custom:labelPosition="left"
+        custom:showText="true" />
+
+
+    <com.yy.app.components.defineview.TestView
+        android:layout_width="100dp"
+        android:layout_height="200dp"
+        app:testAttr="520"
+        app:text="helloworld" />
 
 
 </LinearLayout>
