--- a/app/src/main/res/layout/activity_component_main.xml
+++ b/app/src/main/res/layout/activity_component_main.xml
@@ -1,119 +1,131 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context=".components.ComponentMainActivity">
 
-
-    <Button
-        android:id="@+id/btn_bubble"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="bubbleActivity"
-        android:textAllCaps="false"></Button>
-
-    <Button
-        android:id="@+id/btn_SwipeRefreshLayout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="SwipeRefreshLayout"
-        android:textAllCaps="false"></Button>
-
-
-    <Button
-        android:id="@+id/btn_fragment"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="fragment"
-        android:textAllCaps="false"></Button>
-
-    <Button
-        android:id="@+id/btn_Animator"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Animator"
-        android:textAllCaps="false"></Button>
-
-    <Button
-        android:id="@+id/btn_ViewPager"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="ViewPager"
-        android:textAllCaps="false"></Button>
-
-    <Button
-        android:id="@+id/btn_other"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="other"
-        android:textAllCaps="false"></Button>
-
-
-
-    <!--src-->
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:contentDescription="@string/app_name"
-        android:src="@drawable/ic_launcher_background"></ImageButton>
-
-    <!--    drawableLeft-->
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:drawableLeft="@drawable/ic_launcher_background"
-        android:text="@string/app_name" />
-
-
-    <!--  CheckBox 复选框 -->
-    <CheckBox
-        android:id="@+id/checkbox_meat"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/meat" />
-
-    <CheckBox
-        android:id="@+id/checkbox_cheese"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/cheese" />
-
-
-    <!--  单选按钮  -->
-    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <RadioButton
-            android:id="@+id/radio_pirates"
+        <Button
+            android:id="@+id/btn_viewpager"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/pirates" />
+            android:text="viewpagerActivity"
+            android:textAllCaps="false" />
 
-        <RadioButton
-            android:id="@+id/radio_ninjas"
+
+        <Button
+            android:id="@+id/btn_bubble"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/ninjas" />
-    </RadioGroup>
+            android:text="bubbleActivity"
+            android:textAllCaps="false" />
 
-    <!--    切换按钮:
-    ToggleButton
-    Switch
-    SwitchCompat
-    CompoundButton-->
-
-    <!--微调框-->
-    <Spinner
-        android:id="@+id/spinner"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content" />
-    <!--    Spinner
-    SpinnerAdapter
-    AdapterView.OnItemSelectedListener-->
+        <Button
+            android:id="@+id/btn_SwipeRefreshLayout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="SwipeRefreshLayout"
+            android:textAllCaps="false" />
 
 
-</LinearLayout>
+        <Button
+            android:id="@+id/btn_fragment"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="fragment"
+            android:textAllCaps="false" />
+
+        <Button
+            android:id="@+id/btn_Animator"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Animator"
+            android:textAllCaps="false" />
+
+        <Button
+            android:id="@+id/btn_ViewPager"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="ViewPager"
+            android:textAllCaps="false" />
+
+        <Button
+            android:id="@+id/btn_other"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="other"
+            android:textAllCaps="false" />
+
+
+        <!--src-->
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:contentDescription="@string/app_name"
+            android:src="@drawable/ic_launcher_background" />
+
+        <!--    drawableLeft-->
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawableLeft="@drawable/ic_launcher_background"
+            android:text="@string/app_name" />
+
+
+        <!--  CheckBox 复选框 -->
+        <CheckBox
+            android:id="@+id/checkbox_meat"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/meat" />
+
+        <CheckBox
+            android:id="@+id/checkbox_cheese"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/cheese" />
+
+
+        <!--  单选按钮  -->
+        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <RadioButton
+                android:id="@+id/radio_pirates"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/pirates" />
+
+            <RadioButton
+                android:id="@+id/radio_ninjas"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/ninjas" />
+        </RadioGroup>
+
+        <!--    切换按钮:
+        ToggleButton
+        Switch
+        SwitchCompat
+        CompoundButton-->
+
+        <!--微调框-->
+        <Spinner
+            android:id="@+id/spinner"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content" />
+        <!--    Spinner
+        SpinnerAdapter
+        AdapterView.OnItemSelectedListener-->
+
+
+    </LinearLayout>
+</ScrollView>
