--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -22,7 +22,7 @@
         <attr name="testAttr" format="integer" />
         <!--        参照类型字段    -->
         <attr name="background" format="reference" />
-        <attr name="textColor" format="color" />
+        <attr name="textColor2" format="color" />
         <!--        bool 值字段-->
         <attr name="focusable" format="boolean" />
         <!--        尺寸 字段-->
