--- a/app/src/main/res/layout/activity_view_pager2.xml
+++ b/app/src/main/res/layout/activity_view_pager2.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,16 +7,29 @@
     tools:context=".components.viewpager.ViewPagerActivity">
 
     <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:gravity="center"
         android:text="title"
-        android:textSize="33sp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:textSize="33sp" />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/mViewpager"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content">
+
+        <!--        <android.support.v4.view.PagerTitleStrip-->
+        <!--            android:id="@+id/pagertitle"-->
+        <!--            android:layout_width="match_parent"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:layout_gravity="top" />-->
+
+        <android.support.v4.view.PagerTabStrip
+            android:id="@+id/pagertab"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top" />
+    </android.support.v4.view.ViewPager>
 
 
 </LinearLayout>
