--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#D81B60</color>
     <color name="red">#f00</color>
     <color name="highlight">@color/red</color>
+    <color name="green">#80f0</color>
 </resources>
