--- a/app/src/main/res/layout/layout2.xml
+++ b/app/src/main/res/layout/layout2.xml
@@ -1,9 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent"
     android:background="#ffff00"
     android:orientation="vertical">
 
+    <com.yy.app.view.CircleImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/banana_pic"
+        app:civ_border_width="5dp"
+        app:civ_border_color="@color/colorPrimary"
+        app:civ_circle_background_color="@color/colorAccent"
+        app:civ_fill_color="@color/red"
+        app:civ_border_overlay="false" />
 
 </LinearLayout>
