--- a/app/src/main/res/layout/activity_swipe_menu_list_view.xml
+++ b/app/src/main/res/layout/activity_swipe_menu_list_view.xml
@@ -7,8 +7,10 @@
     tools:context=".components.listview.swipemenulistview.SwipeMenuListViewActivity">
 
 
-    <com.baoyz.swipemenulistview.SwipeMenuListView
+    <com.yy.app.view.swipelistview.SwipeMenuListView
         android:id="@+id/listView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+
+
 </LinearLayout>
