--- a/app/src/main/res/layout/item_list_app.xml
+++ b/app/src/main/res/layout/item_list_app.xml
@@ -1,23 +1,23 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="96dp"
+    android:gravity="clip_vertical"
+    android:orientation="horizontal"
     android:padding="8dp">
 
     <ImageView
         android:id="@+id/iv_icon"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
         android:src="@drawable/ic_launcher" />
 
     <TextView
         android:id="@+id/tv_name"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="10dp"
-        android:layout_toRightOf="@+id/iv_icon"
+        android:layout_height="match_parent"
+        android:gravity="center"
         android:text="name"
         android:textColor="@android:color/black"
         android:textSize="18sp" />
 
-</RelativeLayout>
+</LinearLayout>
