--- a/app/src/main/res/layout/activity_component_main.xml
+++ b/app/src/main/res/layout/activity_component_main.xml
@@ -12,6 +12,13 @@
         android:orientation="vertical">
 
         <Button
+            android:id="@+id/btn_dialog"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="DialogActivity"
+            android:textAllCaps="false" />
+
+        <Button
             android:id="@+id/btn_swiplistview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
