--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,9 @@
     <color name="red">#f00</color>
     <color name="highlight">@color/red</color>
     <color name="green">#80f0</color>
+
+    <color name="titleColor">#757575</color>
+    <color name="titleColorSelected">#F54D33</color>
+
+
 </resources>
