--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -43,4 +43,14 @@
         tools:layout_editor_absoluteY="128dp" />
 
 
+    <Button
+        android:id="@+id/btn_tabhost"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="tabhost"
+        android:textAllCaps="false"
+        tools:layout_editor_absoluteX="93dp"
+        tools:layout_editor_absoluteY="128dp" />
+
+
 </android.support.v7.widget.LinearLayoutCompat>
