--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -119,6 +119,13 @@
             android:text="MvcActivity"
             android:textAllCaps="false" />
 
+        <Button
+            android:id="@+id/btn_mvp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="MvpActivity"
+            android:textAllCaps="false" />
+
 
         <TextView
             android:id="@+id/toSecondButtonRefResult"
