--- a/app/src/main/res/layout/activity_constraint.xml
+++ b/app/src/main/res/layout/activity_constraint.xml
@@ -47,8 +47,8 @@
         android:id="@+id/id_btn01"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:text="Btn01"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/tv1"
+        android:text="Btn01" />
 
     <Button
         android:layout_width="0dp"
@@ -56,8 +56,36 @@
         app:layout_constraintLeft_toRightOf="@id/id_btn01"
         android:text="Btn02"
         android:layout_alignParentEnd="true"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/tv1"
+        app:layout_constraintRight_toRightOf="parent" />
+
+
+    <!--  app:layout_constraintDimensionRatio="H,16:6" 的使用  -->
+    <TextView
+        android:id="@+id/banner"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="#765"
+        android:gravity="center"
+        android:text="Banner"
+        app:layout_constraintTop_toBottomOf="@id/id_btn01"
+        app:layout_constraintDimensionRatio="H,16:6"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
+
+    <!--里面嵌套线性布局-->
+    <LinearLayout
+        android:layout_marginTop="20dp"
+        app:layout_constraintTop_toBottomOf="@id/banner"
+        android:layout_width="match_parent"
+        android:orientation="horizontal"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:text="我们亚洲🌏"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
 
 
 </android.support.constraint.ConstraintLayout>
