--- a/app/src/main/res/layout/activity_constraint.xml
+++ b/app/src/main/res/layout/activity_constraint.xml
@@ -75,17 +75,42 @@
 
     <!--里面嵌套线性布局-->
     <LinearLayout
-        android:layout_marginTop="20dp"
-        app:layout_constraintTop_toBottomOf="@id/banner"
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:orientation="horizontal"
-        android:layout_height="wrap_content">
+        app:layout_constraintTop_toBottomOf="@id/banner">
 
         <TextView
             android:layout_width="wrap_content"
-            android:text="我们亚洲🌏"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:text="我们亚洲🌏" />
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        tools:layout_editor_absoluteX="41dp"
+        tools:layout_editor_absoluteY="406dp" />
+
+    <TextView
+        android:id="@+id/textView9"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        app:layout_constraintBottom_toBottomOf="@+id/textView8"
+        tools:layout_editor_absoluteX="309dp" />
+
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button"
+        app:layout_constraintEnd_toEndOf="@+id/textView9"
+        tools:layout_editor_absoluteY="490dp" />
 
 
 </android.support.constraint.ConstraintLayout>
