--- a/app/src/main/res/layout/activity_constraint.xml
+++ b/app/src/main/res/layout/activity_constraint.xml
@@ -32,6 +32,7 @@
         app:layout_constraintTop_toTopOf="@id/tv1" />
 
     <TextView
+        android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -45,19 +46,22 @@
 
     <Button
         android:id="@+id/id_btn01"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/tv1"
-        android:text="Btn01" />
-
-    <Button
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintLeft_toRightOf="@id/id_btn01"
-        android:text="Btn02"
+        android:text="Btn01"
+        app:layout_constraintEnd_toStartOf="@+id/button7"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv1" />
+
+    <Button
+        android:id="@+id/button7"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
-        app:layout_constraintTop_toBottomOf="@id/tv1"
-        app:layout_constraintRight_toRightOf="parent" />
+        android:text="Btn02"
+        app:layout_constraintLeft_toRightOf="@id/id_btn01"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv1" />
 
 
     <!--  app:layout_constraintDimensionRatio="H,16:6" 的使用  -->
@@ -68,10 +72,10 @@
         android:background="#765"
         android:gravity="center"
         android:text="Banner"
-        app:layout_constraintTop_toBottomOf="@id/id_btn01"
         app:layout_constraintDimensionRatio="H,16:6"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/id_btn01" />
 
     <!--里面嵌套线性布局-->
     <LinearLayout
@@ -92,9 +96,10 @@
         android:id="@+id/textView8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="12dp"
         android:text="TextView"
-        tools:layout_editor_absoluteX="41dp"
-        tools:layout_editor_absoluteY="406dp" />
+        app:layout_constraintStart_toStartOf="@+id/button6"
+        tools:layout_editor_absoluteY="490dp" />
 
     <TextView
         android:id="@+id/textView9"
@@ -111,6 +116,14 @@
         android:text="Button"
         app:layout_constraintEnd_toEndOf="@+id/textView9"
         tools:layout_editor_absoluteY="490dp" />
+
+    <Button
+        android:id="@+id/button6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button"
+        tools:layout_editor_absoluteX="35dp"
+        tools:layout_editor_absoluteY="377dp" />
 
 
 </android.support.constraint.ConstraintLayout>
