notification - new 的使用

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,6 +48,13 @@
             android:textAllCaps="false" />
 
         <Button
+            android:id="@+id/btn_notification"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="通知activity"
+            android:textAllCaps="false" />
+
+        <Button
             android:id="@+id/btn_DrawLayout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
